CONFSERVER-55442 remove borked version of collectd

--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -600,7 +600,7 @@ Resources:
             !If
               - DoCollectd
               - yum:
-                  collectd: [5.7.1]
+                  collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
@@ -817,7 +817,7 @@ Resources:
             !If
               - DoCollectd
               - yum:
-                  collectd: [5.7.1]
+                  collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
