--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -652,9 +652,6 @@ Resources:
                     - ATL_SSL_SELF_CERT_ENABLED=false
                     - !If [SetupSSL, "ATL_SSL_PROXY=true", !Ref "AWS::NoValue"]
                     - !Join ["\n", !Ref AMIOpts]
-              mode: 000600
-              owner: root
-              group: root
             /etc/cfn/cfn-hup.conf:
               content: !Join
                 - "\n"
@@ -662,7 +659,7 @@ Resources:
                   - "[main]"
                   - !Sub ["stack=${StackId}", StackId: !Ref "AWS::StackId"]
                   - !Sub ["region=${Region}", Region: !Ref "AWS::Region"]
-              mode: 000400
+              mode: "000400"
               owner: root
               group: root
             /etc/cfn/hooks.d/cfn-auto-reloader.conf:
@@ -687,7 +684,7 @@ Resources:
                     -     . ~/.bashrc
                     - fi
                     - !Sub ["export CATALINA_OPTS=\"${CatalinaOpts}\"", CatalinaOpts: !Ref CatalinaOpts]
-              mode: 000644
+              mode: "000644"
               owner: atlbitbucket
               group: atlbitbucket
           commands:
@@ -864,7 +861,7 @@ Resources:
                     - "[main]"
                     - !Sub ["stack=${StackId}", StackId: !Ref "AWS::StackId"]
                     - !Sub ["region=${Region}", Region: !Ref "AWS::Region"]
-              mode: 000400
+              mode: "000400"
               owner: root
               group: root
             /etc/cfn/hooks.d/cfn-auto-reloader.conf:
@@ -937,7 +934,7 @@ Resources:
                       - StandbyMode
                       - !Sub ["DR_RDS_READ_REPLICA=${DB}", DB: !Ref DB]
                       - !Ref "AWS::NoValue"
-              mode: 000644
+              mode: "000644"
               owner: "ec2-user"
               group: "ec2-user"
           commands:
