ITOPS-423 changing GetAtt to Ref to fix cfn template validation.

--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -1195,4 +1195,4 @@ Outputs:
     }
   DBEndpointAddress:
     Description: The Database Connection String
-    Value: !GetAtt DBCname
+    Value: !Ref DBCname
