ITOPS-497 template mods to support public ip's and fix proxyname

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -249,6 +249,7 @@ Parameters:
       - m4.2xlarge
       - m4.4xlarge
   CatalinaOpts:
+    Default: ''
     Description: Pass in any additional jvm options to tune Catalina
     Type: String
   CidrBlock:
@@ -262,10 +263,6 @@ Parameters:
   ClusterNodeInstanceType:
     Default: c5.xlarge
     AllowedValues:
-      - c3.xlarge
-      - c3.2xlarge
-      - c3.4xlarge
-      - c3.8xlarge
       - c4.large
       - c4.xlarge
       - c4.2xlarge
@@ -277,6 +274,10 @@ Parameters:
       - c5.4xlarge
       - c5.9xlarge
       - c5.18xlarge
+      - d2.xlarge
+      - d2.2xlarge
+      - d2.4xlarge
+      - d2.8xlarge
       - i2.xlarge
       - i2.2xlarge
       - i2.4xlarge
@@ -287,18 +288,18 @@ Parameters:
       - i3.4xlarge
       - i3.8xlarge
       - i3.16xlarge
-      - m3.medium
       - m4.large
       - m4.xlarge
       - m4.2xlarge
       - m4.4xlarge
       - m4.10xlarge
       - m4.16xlarge
-      - r3.large
-      - r3.xlarge
-      - r3.2xlarge
-      - r3.4xlarge
-      - r3.8xlarge
+      - m5.large
+      - m5.xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+      - m5.10xlarge
+      - m5.16xlarge
       - r4.large
       - r4.xlarge
       - r4.2xlarge
@@ -335,25 +336,24 @@ Parameters:
     Description: The version of Confluence to install
     Type: String
   CustomDnsName:
+    Default: ''
     Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
     Type: String
   DBInstanceClass:
     Default: db.m4.xlarge
     AllowedValues:
-      - db.m3.medium
-      - db.m3.large
-      - db.m3.xlarge
-      - db.m3.2xlarge
       - db.m4.large
       - db.m4.xlarge
       - db.m4.2xlarge
       - db.m4.4xlarge
       - db.m4.10xlarge
-      - db.r3.large
-      - db.r3.xlarge
-      - db.r3.2xlarge
-      - db.r3.4xlarge
-      - db.r3.8xlarge
+      - db.m4.16xlarge
+      - db.r4.large
+      - db.r4.xlarge
+      - db.r4.2xlarge
+      - db.r4.4xlarge
+      - db.r4.8xlarge
+      - db.r4.16xlarge
       - db.t2.medium
       - db.t2.large
     ConstraintDescription: Must be a valid RDS instance class, from the selection list
@@ -367,6 +367,7 @@ Parameters:
     MaxValue: 3000
     Type: Number
   DBMasterUserPassword:
+    Default: ''
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
     Description: Database admin account password.
@@ -382,6 +383,7 @@ Parameters:
     ConstraintDescription: Must be 'true' or 'false'.
     Type: String
   DBPassword:
+    Default: ''
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
     Description: Database user account password.
@@ -461,6 +463,7 @@ Parameters:
       - true
       - false
   ExternalSubnets:
+    Default: ''
     ConstraintDescription: Must be a list of two or more Subnet ID's within the selected VPC.
     Description: Subnets (two or more) where your user-facing load balancer will be deployed. MUST be within the selected VPC.
     Type: List<AWS::EC2::Subnet::Id>
@@ -470,6 +473,7 @@ Parameters:
     Description: The domain name of the Route53 PRIVATE Hosted Zone in which to create cnames
     Type: String
   InternalSubnets:
+    Dfeault: ''
     ConstraintDescription: Must be a list of two or more Subnet ID's within the selected VPC.
     Description: Subnets (two or more) where your cluster nodes and other internal infrastructure will be deployed. MUST be within the selected VPC. Specify the ExternalSubnets again here if you wish to deploy the whole stack into the same subnets.
     Type: List<AWS::EC2::Subnet::Id>
@@ -482,6 +486,7 @@ Parameters:
     Description: Override the default amount of memory to allocoate to the JVM for Synchrony, for your instance type - set size in meg or gig e.g. 1024m or 1g.
     Type: String
   KeyName:
+    Default: ''
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
@@ -521,10 +526,6 @@ Parameters:
   SynchronyNodeInstanceType:
     Default: c5.large
     AllowedValues:
-      - c3.xlarge
-      - c3.2xlarge
-      - c3.4xlarge
-      - c3.8xlarge
       - c4.large
       - c4.xlarge
       - c4.2xlarge
@@ -536,6 +537,10 @@ Parameters:
       - c5.4xlarge
       - c5.9xlarge
       - c5.18xlarge
+      - d2.xlarge
+      - d2.2xlarge
+      - d2.4xlarge
+      - d2.8xlarge
       - i2.xlarge
       - i2.2xlarge
       - i2.4xlarge
@@ -546,18 +551,18 @@ Parameters:
       - i3.4xlarge
       - i3.8xlarge
       - i3.16xlarge
-      - m3.medium
       - m4.large
       - m4.xlarge
       - m4.2xlarge
       - m4.4xlarge
       - m4.10xlarge
       - m4.16xlarge
-      - r3.large
-      - r3.xlarge
-      - r3.2xlarge
-      - r3.4xlarge
-      - r3.8xlarge
+      - m5.large
+      - m5.xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+      - m5.10xlarge
+      - m5.16xlarge
       - r4.large
       - r4.xlarge
       - r4.2xlarge
@@ -583,7 +588,8 @@ Parameters:
     Type: String
   TomcatContextPath:
     Default: ''
-    Description: The context path of this web application, which is matched against the beginning of each request URI to select the appropriate web application for processing
+    AllowedPattern: '^(\/[A-z_\-0-9\.]+)?$'
+    Description: The context path of this web application, which is matched against the beginning of each request URI to select the appropriate web application for processing. If used, must include leading "/"
     Type: String
   TomcatDefaultConnectorPort:
     Default: 8080
@@ -623,6 +629,7 @@ Parameters:
     Description: Set this attribute to true if you wish to have calls to request.isSecure() to return true for requests received by this Connector. Needed for ssl offloading.
     Type: String
   VPC:
+    Default: ''
     ConstraintDescription: Must be the ID of a VPC.
     Description: Virtual Private Cloud
     Type: AWS::EC2::VPC::Id
@@ -657,21 +664,6 @@ Conditions:
     !Equals [!Ref 'AWS::Region', 'us-gov-west-1']
 Mappings:
   AWSInstanceType2Arch:
-    c3.large:
-      Arch: HVM64
-      Jvmheap: 2048m
-    c3.xlarge:
-      Arch: HVM64
-      Jvmheap: 6144m
-    c3.2xlarge:
-      Arch: HVM64
-      Jvmheap: 12288m
-    c3.4xlarge:
-      Arch: HVM64
-      Jvmheap: 12288m
-    c3.8xlarge:
-      Arch: HVM64
-      Jvmheap: 12288m
     c4.large:
       Arch: HVM64
       Jvmheap: 2048m
@@ -692,10 +684,10 @@ Mappings:
       Jvmheap: 2048m
     c5.xlarge:
       Arch: HVM64
-      Jvmheap: 6144m
+      Jvmheap: 4608m
     c5.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288m
+      Jvmheap: 10240m
     c5.4xlarge:
       Arch: HVM64
       Jvmheap: 12288m
@@ -747,9 +739,6 @@ Mappings:
     i3.16xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    m3.medium:
-      Arch: HVM64
-      Jvmheap: 2048m
     m4.large:
       Arch: HVM64
       Jvmheap: 6144m
@@ -768,19 +757,22 @@ Mappings:
     m4.16xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    r3.large:
+    m5.large:
+      Arch: HVM64
+      Jvmheap: 5120m
+    m5.xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    r3.xlarge:
+    m5.2xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    r3.2xlarge:
+    m5.4xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    r3.4xlarge:
+    m5.10xlarge:
       Arch: HVM64
       Jvmheap: 12288m
-    r3.8xlarge:
+    m5.16xlarge:
       Arch: HVM64
       Jvmheap: 12288m
     r4.large:
@@ -975,7 +967,7 @@ Resources:
                     - !Sub ["ATL_JDBC_PASSWORD=${DBPassword}", DBPassword: !Ref DBPassword]
                     - !Sub ["ATL_JDBC_URL=jdbc:postgresql://${DBEndpointAddress}:${DBEndpointPort}/confluence", { DBEndpointAddress: !GetAtt DB.Endpoint.Address, DBEndpointPort: !GetAtt DB.Endpoint.Port }]
                     - !Sub ["ATL_JVM_HEAP=${AtlJvmHeap}", AtlJvmHeap: !If [OverrideHeap, !Ref 'JvmHeapOverride', !FindInMap [AWSInstanceType2Arch, !Ref ClusterNodeInstanceType, Jvmheap]]]
-                    - !Sub ["ATL_PROXY_NAME=${AtlProxyName}", AtlProxyName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname,  !Sub ["${HTTP}://${LoadBalancerDNSName}", {HTTP: !If [SSLScheme, 'https', 'http'], LoadBalancerDNSName: !If [UseCustomDnsName, !Ref CustomDnsName, !GetAtt LoadBalancer.DNSName]}]]]]
+                    - !Sub ["ATL_PROXY_NAME=${AtlProxyName}", AtlProxyName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname, !GetAtt LoadBalancer.DNSName]]]
                     - !Sub ["ATL_STARTCOLLECTD=${StartCollectd}", StartCollectd: !Ref StartCollectd]
                     - !Sub ["ATL_SYNCHRONY_SERVICE_URL=${Protocol}://${LoadBalancerName}/synchrony/v1", {Protocol: !If [SSLScheme, "https", "http"], LoadBalancerName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname,  !Sub ["${HTTP}://${LoadBalancerDNSName}", {HTTP: !If [SSLScheme, 'https', 'http'], LoadBalancerDNSName: !If [UseCustomDnsName, !Ref CustomDnsName, !GetAtt LoadBalancer.DNSName]}]]]}]
                     - !Sub ["ATL_TOMCAT_ACCEPTCOUNT=${TomcatAcceptCount}", TomcatAcceptCount: !Ref TomcatAcceptCount]
@@ -1065,7 +1057,7 @@ Resources:
                 packages:
                   yum: [nfs-utils]
     Properties:
-      AssociatePublicIpAddress: !Ref AssociatePublicIpAddress
+      AssociatePublicIpAddress: false
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
@@ -1078,7 +1070,7 @@ Resources:
       ImageId:
         !FindInMap
           - AWSRegionArch2AMI
-          - !Ref 'AWS::Region'
+          - !Ref AWS::Region
           - !FindInMap
               - AWSInstanceType2Arch
               - !Ref ClusterNodeInstanceType
@@ -1204,7 +1196,7 @@ Resources:
                     - !Sub ["ATL_JDBC_PASSWORD=${DBPassword}", DBPassword: !Ref DBPassword]
                     - !Sub ["ATL_JDBC_URL=jdbc:postgresql://${DBEndpointAddress}:${DBEndpointPort}/confluence", { DBEndpointAddress: !GetAtt DB.Endpoint.Address, DBEndpointPort: !GetAtt DB.Endpoint.Port }]
                     - !Sub ["ATL_JVM_HEAP=${AtlJvmHeap}", AtlJvmHeap: !If [OverrideHeap, !Ref 'JvmHeapOverride', !FindInMap [AWSInstanceType2Arch, !Ref ClusterNodeInstanceType, Jvmheap]]]
-                    - !Sub ["ATL_PROXY_NAME=${ProxyName}", ProxyName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname,  !Sub ["${HTTP}://${LoadBalancerDNSName}", {HTTP: !If [SSLScheme, 'https', 'http'], LoadBalancerDNSName: !If [UseCustomDnsName, !Ref CustomDnsName, !GetAtt LoadBalancer.DNSName]}]]]]
+                    - !Sub ["ATL_PROXY_NAME=${AtlProxyName}", AtlProxyName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname, !GetAtt LoadBalancer.DNSName]]]
                     - !Sub ["ATL_SYNCHRONY_MEMORY=-Xmx${AtlJvmHeapSynchrony}", AtlJvmHeapSynchrony: !If [OverrideHeapSynchrony, !Ref 'JvmHeapOverrideSynchrony', '2g']]
                     - !Sub ["ATL_SYNCHRONY_SERVICE_URL=${Protocol}://${LoadBalancerName}/synchrony", {Protocol: !If [SSLScheme, "https", "http"], LoadBalancerName: !If [UseCustomDnsName, !Ref CustomDnsName, !If [UseHostedZone, !Ref LoadBalancerCname,  !Sub ["${HTTP}://${LoadBalancerDNSName}", {HTTP: !If [SSLScheme, 'https', 'http'], LoadBalancerDNSName: !If [UseCustomDnsName, !Ref CustomDnsName, !GetAtt LoadBalancer.DNSName]}]]]}]
                     - "ATL_APP_DATA_MOUNT_ENABLED=false"
@@ -1402,7 +1394,7 @@ Resources:
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBSnapshotIdentifier: !If [DoRestoreFromRDSSnapshot, !Ref DBSnapshotId, !Ref 'AWS::NoValue']
       Engine: postgres
-      EngineVersion: 9.6
+      EngineVersion: 9.5
       Iops: !If [DBProvisionedIops, !Ref DBIops, !Ref 'AWS::NoValue']
       MasterUsername: postgres
       MasterUserPassword: !If [DoSetDBMasterUserPassword, !Ref DBMasterUserPassword, !Ref 'AWS::NoValue']
@@ -1490,7 +1482,7 @@ Resources:
   MainTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Port: 8080
+      Port: !Ref TomcatDefaultConnectorPort
       Protocol: HTTP
       VpcId: !Ref VPC
       HealthCheckIntervalSeconds: 20
@@ -1499,7 +1491,7 @@ Resources:
       Matcher:
         HttpCode: 200
       HealthCheckPath: !If [UseContextPath, !Join ['', [!Ref 'TomcatContextPath', '/status']], '/status']
-      HealthCheckPort: 8080
+      HealthCheckPort: !Ref TomcatDefaultConnectorPort
       HealthCheckProtocol: HTTP
       TargetGroupAttributes:
         - Key: stickiness.enabled
@@ -1581,27 +1573,42 @@ Resources:
       ToPort: -1
       SourceSecurityGroupId: !Ref SecurityGroup
 Outputs:
-  ConfluenceTargetGroupARN:
-    Description: The name of the load balancer of Confluence cluster nodes
-    Value: !Ref MainTargetGroup
-  ClusterNodeGroup:
-    Description: The name of the auto scaling group of Confluence cluster nodes
-    Value: !Ref ClusterNodeGroup
-  ConfluenceURL:
-    Description: The URL of Confluence Data Center instance
+  ServiceURL:
+    Description: The URL to access this Atlassian service
     Value: !If
       - UseCustomDnsName
-      - !Ref CustomDnsName
+      - !Sub
+        - "${HTTP}://${CustomDNSName}${ContextPath}"
+        - HTTP: !If [SSLScheme, 'https', 'http']
+          CustomDNSName: !Ref CustomDnsName
+          ContextPath: !Ref TomcatContextPath
       - !If
         - UseHostedZone
-        - !Ref LoadBalancerCname
         - !Sub
-          - "${HTTP}://${LoadBalancerDNSName}"
+          - "${HTTP}://${LBCName}${ContextPath}"
           - HTTP: !If [SSLScheme, 'https', 'http']
-            LoadBalancerDNSName: !If
-              - UseCustomDnsName
-              - !Ref CustomDnsName
-              - !GetAtt LoadBalancer.DNSName
+            LBCName: !Ref LoadBalancerCname
+            ContextPath: !Ref TomcatContextPath
+        - !Sub
+          - "${HTTP}://${LoadBalancerDNSName}${ContextPath}"
+          - HTTP: !If [SSLScheme, 'https', 'http']
+            LoadBalancerDNSName: !GetAtt LoadBalancer.DNSName
+            ContextPath: !Ref TomcatContextPath
+  LoadBalancerURL:
+    Description: The Load Balancer URL
+    Value: !Sub
+      - "${HTTP}://${LoadBalancerDNSName}"
+      - HTTP: !If [SSLScheme, 'https', 'http']
+        LoadBalancerDNSName: !GetAtt LoadBalancer.DNSName
+  SGname:
+    Description: The name of the SecurityGroup
+    Value: !Ref SecurityGroup
+    Export: {
+      Name: !Join ['', [!Ref 'AWS::StackName', '-SGname']]
+    }
+  DBEndpointAddress:
+    Description: The Database Connection String
+    Value: !GetAtt DB.Endpoint.Address
   EFSCname:
     Description: The cname of the EFS
     Value: !If
@@ -1611,27 +1618,12 @@ Outputs:
     Export: {
       Name: !Join ['', [!Ref 'AWS::StackName', '-EFSCname']]
     }
-  LoadBalancerURL:
-    Description: The Load Balancer URL
-    Value: !If
-      - UseCustomDnsName
-      - !Ref CustomDnsName
-      - !If
-        - UseHostedZone
-        - !Ref LoadBalancerCname
-        - !Sub
-          - "${HTTP}://${LoadBalancerDNSName}"
-          - HTTP: !If [SSLScheme, 'https', 'http']
-            LoadBalancerDNSName: !If
-              - UseCustomDnsName
-              - !Ref CustomDnsName
-              - !GetAtt LoadBalancer.DNSName
-  SGname:
-    Description: The name of the SecurityGroup
-    Value: !Ref SecurityGroup
-    Export: {
-      Name: !Join ['', [!Ref 'AWS::StackName', '-SGname']]
-    }
+  ConfluenceTargetGroupARN:
+    Description: The name of the load balancer of Confluence cluster nodes
+    Value: !Ref MainTargetGroup
+  ClusterNodeGroup:
+    Description: The name of the auto scaling group of Confluence cluster nodes
+    Value: !Ref ClusterNodeGroup
   SynchronyClusterNodeGroup:
     Description: The name of the auto scaling group of Synchrony cluster nodes
     Value: !Ref SynchronyClusterNodeGroup
