--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -11,6 +11,7 @@ Metadata:
           default: Confluence setup
         Parameters:
           - ConfluenceVersion
+          - Environment
       - Label:
           default: Cluster nodes
         Parameters:
@@ -135,6 +136,8 @@ Metadata:
         default: Database storage
       DBStorageType:
         default: Database storage type
+      Environment:
+        default: Production
       ExternalSubnets:
         default: External subnets *
       HostedZone:
@@ -386,6 +389,15 @@ Parameters:
       - Provisioned IOPS
     ConstraintDescription: Must be 'General Purpose (SSD)' or 'Provisioned IOPS'.
     Description: Database storage type
+    Type: String
+  Environment:
+    Default: Production
+    AllowedValues:
+      - Production
+      - Staging
+      - DR
+    ConstraintDescription: Must be either Production, Staging, or DR.
+    Description: Environment Application to be used in, either Production, Staging, or Disaster Recovery (DR)
     Type: String
   ExternalSubnets:
     Default: ''
@@ -880,6 +892,7 @@ Resources:
                     - !Sub ["ATL_DB_PREFERREDTESTQUERY=\"${DBPreferredTestQuery}\"", DBPreferredTestQuery: !Ref DBPreferredTestQuery]
                     - !Sub ["ATL_DB_TIMEOUT=${DBTimeout}", DBTimeout: !Ref DBTimeout]
                     - !Sub ["ATL_DB_VALIDATE=${DBValidate}", DBValidate: !Ref DBValidate]
+                    - !Sub ["ATL_ENVIRONMENT=${Environment}", Environment: !Ref Environment]
                     - !Sub ["ATL_HAZELCAST_NETWORK_AWS_IAM_REGION=${HazelcastAWSRegion}", HazelcastAWSRegion: !Ref "AWS::Region"]
                     - !Sub ["ATL_HAZELCAST_NETWORK_AWS_IAM_ROLE=${ConfluenceClusterNodeRole}", ConfluenceClusterNodeRole: !Ref ConfluenceClusterNodeRole]
                     - !Sub ["ATL_HAZELCAST_NETWORK_AWS_TAG_VALUE=${HazelcastAWSTagValue}", HazelcastAWSTagValue: !Ref "AWS::StackName"]
