--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -11,6 +11,7 @@ Metadata:
           default: Crowd setup
         Parameters:
           - CrowdVersion
+          - Environment
       - Label:
           default: Cluster nodes
         Parameters:
@@ -129,6 +130,8 @@ Metadata:
         default: DB Test While Idle?
       DBTimeBetweenEvictionRunsMillis:
         default: DB Time Between Eviction Runs
+      Environment:
+        default: Production
       ExternalSubnets:
         default: External subnets *
       HostedZone:
@@ -362,6 +365,15 @@ Parameters:
   DBTimeBetweenEvictionRunsMillis:
     Default: 60000
     Description: The number of milliseconds to sleep between runs of the idle object eviction thread. When non-positive, no idle object eviction thread will be run
+    Type: String
+  Environment:
+    Default: Production
+    AllowedValues:
+      - Production
+      - Staging
+      - DR
+    ConstraintDescription: Must be either Production, Staging, or DR.
+    Description: Environment Application to be used in, either Production, Staging, or Disaster Recovery (DR)
     Type: String
   ExternalSubnets:
     Default: ''
@@ -764,6 +776,7 @@ Resources:
                     - !Sub ["ATL_DB_TESTONBORROW=${DBTestOnBorrow}", DBTestOnBorrow: !Ref DBTestOnBorrow]
                     - !Sub ["ATL_DB_TESTWHILEIDLE=${DBTestWhileIdle}", DBTestWhileIdle: !Ref DBTestWhileIdle]
                     - !Sub ["ATL_DB_TIMEBETWEENEVICTIONRUNSMILLIS=${DBTimeBetweenEvictionRunsMillis}", DBTimeBetweenEvictionRunsMillis: !Ref DBTimeBetweenEvictionRunsMillis]
+                    - !Sub ["ATL_ENVIRONMENT=${Environment}", Environment: !Ref Environment]
                     - !Sub ["ATL_JDBC_PASSWORD=${DBPassword}", DBPassword: !Ref DBPassword]
                     - !Sub ["ATL_JDBC_URL=jdbc:postgresql://${DBEndpointAddress}:${DBEndpointPort}/crowd", { DBEndpointAddress: !GetAtt DB.Endpoint.Address, DBEndpointPort: !GetAtt DB.Endpoint.Port }]
                     - !Sub ["ATL_CROWD_INSTALLER_DOWNLOAD_URL=${CrowdDownloadUrl}", CrowdDownloadUrl: !Ref CrowdDownloadUrl]
