--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -12,6 +12,7 @@ Metadata:
         Parameters:
           - JiraProduct
           - JiraVersion
+          - Environment
       - Label:
           default: Cluster nodes
         Parameters:
@@ -130,6 +131,8 @@ Metadata:
         default: DB Test While Idle?
       DBTimeBetweenEvictionRunsMillis:
         default: DB Time Between Eviction Runs
+      Environment:
+        default: Production
       ExternalSubnets:
         default: External subnets *
       HostedZone:
@@ -365,6 +368,15 @@ Parameters:
   DBTimeBetweenEvictionRunsMillis:
     Default: 60000
     Description: The number of milliseconds to sleep between runs of the idle object eviction thread. When non-positive, no idle object eviction thread will be run
+    Type: String
+  Environment:
+    Default: Production
+    AllowedValues:
+      - Production
+      - Staging
+      - DR
+    ConstraintDescription: Must be either Production, Staging, or DR.
+    Description: Environment Application to be used in, either Production, Staging, or Disaster Recovery (DR)
     Type: String
   ExternalSubnets:
     Default: ''
@@ -768,6 +780,7 @@ Resources:
                     - !Sub ["ATL_DB_TESTONBORROW=${DBTestOnBorrow}", DBTestOnBorrow: !Ref DBTestOnBorrow]
                     - !Sub ["ATL_DB_TESTWHILEIDLE=${DBTestWhileIdle}", DBTestWhileIdle: !Ref DBTestWhileIdle]
                     - !Sub ["ATL_DB_TIMEBETWEENEVICTIONRUNSMILLIS=${DBTimeBetweenEvictionRunsMillis}", DBTimeBetweenEvictionRunsMillis: !Ref DBTimeBetweenEvictionRunsMillis]
+                    - !Sub ["ATL_ENVIRONMENT=${Environment}", Environment: !Ref Environment]
                     - !Sub ["ATL_JDBC_PASSWORD=${DBPassword}", DBPassword: !Ref DBPassword]
                     - !Sub ["ATL_JDBC_URL=jdbc:postgresql://${DBEndpointAddress}:${DBEndpointPort}/jira", { DBEndpointAddress: !GetAtt DB.Endpoint.Address, DBEndpointPort: !GetAtt DB.Endpoint.Port }]
                     - !Sub ["ATL_JIRA_FULL_DISPLAY_NAME=${JiraFullDisplayName}", JiraFullDisplayName: !FindInMap [ "JIRAProduct2NameAndVersion", !Ref JiraProduct, "fulldisplayname"]]
