ITOPS-424 force replacement of target group on load balancer replacement

--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -1102,6 +1102,7 @@ Resources:
   ConfluenceServerTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
+      Name: !Join ['-', [!Ref 'AWS::StackName', !Select [2, !Split ['-', !GetAtt LoadBalancer.LoadBalancerName]]]]
       Port: !Ref TomcatDefaultConnectorPort
       Protocol: HTTP
       VpcId: !Ref VPC
