--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -1,7 +1,4 @@
 ---
-# bring up diffs between this file and the BitbucketDataCenter.template.yaml, ConfluenceDataCenter.template.yaml, and JiraDataCenter.template.yaml
-# As a rule, we should work to minimize our diffs between these files as best we can, so that future changes are easy to make across all supported CloudFormation templates.
-# Using YAML as our file format will allow us to put a block comment at the top of the file saying exactly this.
 AWSTemplateFormatVersion: 2010-09-09
 Description: Atlassian Crowd Data Center
 Metadata:
@@ -173,7 +170,7 @@ Metadata:
         default: VPC *
 Parameters:
   AssociatePublicIpAddress:
-    Default: false
+    Default: true
     AllowedValues: [true, false]
     ConstraintDescription: Must be 'true' or 'false'.
     Description: Controls if the EC2 instances are assigned a public IP address
@@ -251,7 +248,7 @@ Parameters:
     Default: 1
     Type: Number
   ClusterNodeSize:
-    Default: 100
+    Default: 50
     Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
     Type: Number
   CustomDnsName:
@@ -693,9 +690,6 @@ Resources:
             Action: ['sts:AssumeRole']
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
-        - arn:aws:iam::515798882395:policy/osquery
-        - arn:aws:iam::515798882395:policy/CfnStackR53NodesSelfupdater
-        - arn:aws:iam::515798882395:policy/forge
       Path: /
       Policies:
         - PolicyName: CrowdClusterNodePolicy
@@ -741,6 +735,16 @@ Resources:
       Comment: ''
       'AWS::CloudFormation::Init':
         '0':
+          packages:
+            !If
+              - DoCollectd
+              - yum:
+                  collectd: []
+                  collectd-java: []
+                  collectd-generic-jmx: []
+                  collectd-rrdtool: []
+                  collectd-disk: []
+              - !Ref "AWS::NoValue"
           files:
             /etc/atl:
               content:
